--- a/components/home.css
+++ b/components/home.css
@@ -1,5 +1,6 @@
 body {
-    background-color: var(--primary-color);
+    background-color: pink;
+    /* background-color: var(--primary-color); */
     color: var(--text-color);
 }
 
