--- a/components/home.css
+++ b/components/home.css
@@ -1,6 +1,5 @@
 body {
-    background-color: pink;
-    /* background-color: var(--primary-color); */
+    background-color: var(--primary-color);
     color: var(--text-color);
 }
 
